custom pluralize template func
