# internal/simple/ent/http/list.go
@@ -78,6 +78,40 @@ func (h *CollarHandler) List(w http.ResponseWriter, r *http.Request) {
 	easyjson.MarshalToHTTPResponseWriter(NewCollar1522160880Views(es), w)
 }
 
+// Read fetches the ent.Media identified by a given url-parameter from the
+// database and returns it to the client.
+func (h *MediaHandler) List(w http.ResponseWriter, r *http.Request) {
+	l := h.log.With(zap.String("method", "List"))
+	q := h.client.Media.Query()
+	var err error
+	page := 1
+	if d := r.URL.Query().Get("page"); d != "" {
+		page, err = strconv.Atoi(d)
+		if err != nil {
+			l.Info("error parsing query parameter 'page'", zap.String("page", d), zap.Error(err))
+			BadRequest(w, "page must be an integer greater zero")
+			return
+		}
+	}
+	itemsPerPage := 30
+	if d := r.URL.Query().Get("itemsPerPage"); d != "" {
+		itemsPerPage, err = strconv.Atoi(d)
+		if err != nil {
+			l.Info("error parsing query parameter 'itemsPerPage'", zap.String("itemsPerPage", d), zap.Error(err))
+			BadRequest(w, "itemsPerPage must be an integer greater zero")
+			return
+		}
+	}
+	es, err := q.Limit(itemsPerPage).Offset((page - 1) * itemsPerPage).All(r.Context())
+	if err != nil {
+		l.Error("error fetching media from db", zap.Error(err))
+		InternalServerError(w, nil)
+		return
+	}
+	l.Info("media rendered", zap.Int("amount", len(es)))
+	easyjson.MarshalToHTTPResponseWriter(NewMedia1941033838Views(es), w)
+}
+
 // Read fetches the ent.Owner identified by a given url-parameter from the
 // database and returns it to the client.
 func (h *OwnerHandler) List(w http.ResponseWriter, r *http.Request) {
